--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="flex justify-center items-center h-screen bg-bgcolor">
   <main class="w-full lg:w-1000 lg:mx-auto text-center bg-white shadow-xl p-8">
     <h1 class="text-6xl font-bold border-b border-b-zinc-400 pb-5">To Do List</h1>
-    <div class="container lg:mx-auto w-full lg:w-850 mt-5">
+    <div class="container w-full lg:mx-auto lg:w-850 mt-5">
       <div class="form flex items-center justify-between">
         <input type="text" placeholder="Please Enter The Task" class="text-xl flex-1 outline-none placeholder:text-zinc-600 font-bold text-zinc-600 p-5 border-b border-b-zinc-400">
         <button class="w-fit px-5 py-4 rounded-full text-xl bg-black text-white font-bold transition-all cursor-pointer hover:bg-gray-800">Add</button>
