--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/CSS/style.css">
   <link rel="stylesheet" href="dist/CSS/index.css">
   <script src="https://kit.fontawesome.com/57d5e4dc4a.js" crossorigin="anonymous"></script>
@@ -14,7 +17,7 @@
     <div class="container w-full lg:mx-auto lg:w-850 mt-5">
       <div class="form flex items-center justify-between">
         <input type="text" placeholder="Please Enter The Task" id="input" class="text-xl flex-1 outline-none placeholder:text-zinc-600 font-bold text-zinc-600 pb-5 border-b border-b-zinc-400">
-        <input type="submit" value="Add" id="add" class="w-fit px-5 py-4 rounded-full text-xl bg-black text-white font-bold transition-all cursor-pointer hover:bg-gray-800">
+        <input type="submit" value="Add" id="add" class="w-fit px-5 py-4 rounded-full text-lg bg-black text-white font-bold transition-all cursor-pointer hover:bg-gray-800">
       </div>
       <ul class="list mt-6" id="list"></ul>
     </div>
