--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200..800&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="dist/imgs/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="dist/CSS/style.css">
   <link rel="stylesheet" href="dist/CSS/index.css">
   <script src="https://kit.fontawesome.com/57d5e4dc4a.js" crossorigin="anonymous"></script>
